--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>967166296212-0j53690ei6ei0bnbmv9jf03a7p190in8.apps.googleusercontent.com</string>
+	<string>261391629677-2c99ramgem1poi664ombjthvjqgb1tfp.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.967166296212-0j53690ei6ei0bnbmv9jf03a7p190in8</string>
+	<string>com.googleusercontent.apps.261391629677-2c99ramgem1poi664ombjthvjqgb1tfp</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDmTqLbsqUR_9u0BLmL5HcpNQILG1hqZoc</string>
+	<string>AIzaSyDiACzXGotKxeD4jlrLRGjCEU2dvq7iRtk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>967166296212</string>
+	<string>261391629677</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>ind.Azuma.QRCodeSample</string>
 	<key>PROJECT_ID</key>
-	<string>qrcodevote-8a98c</string>
+	<string>qrcod-2b311</string>
 	<key>STORAGE_BUCKET</key>
-	<string>qrcodevote-8a98c.appspot.com</string>
+	<string>qrcod-2b311.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:967166296212:ios:339b6e59716ecd22</string>
+	<string>1:261391629677:ios:339b6e59716ecd22</string>
 	<key>DATABASE_URL</key>
-	<string>https://qrcodevote-8a98c.firebaseio.com</string>
+	<string>https://qrcod-2b311.firebaseio.com</string>
 </dict>
 </plist>
